added word count

--- a/www/css/reviews/all-reviews.css
+++ b/www/css/reviews/all-reviews.css
@@ -77,6 +77,98 @@
   color:#000;
 }
 
+.residential-review #infoIcon i{
+    color: #18AFD1;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+
+/*Under Construction reviews*/
+.under-construction-review .under-construction-review-content {
+    background-color: #F5F7F7;
+}
+
+.under-construction-review .review-params {
+  background-color:#F5F7F7;
+} 
+
+.under-construction-review .owner, .under-construction-review .other {
+  width:45px;
+}
+
+.under-construction-review .display-style {
+  width: 94%;
+  margin: 0 auto 15px auto;
+}
+
+.under-construction-review .review-title label {
+  padding:0px;
+  border: 1px solid #18AFD1;
+}
+
+.under-construction-review .review-title label input {
+  padding: 0 5px;
+}
+
+.under-construction-review .project-review label{
+    height: 120px;
+    border: 1px solid #18AFD1;
+    border-radius: 3px;
+    margin: 0 auto;
+}
+
+.under-construction-review .project-review textarea{
+    line-height: 21px;
+    margin-top: 60px;
+}
+
+.under-construction-review .ans{
+  border:1px solid #ccc;
+  text-align:center;
+}
+
+.under-construction-review .yesSelected{
+  border:1px solid #33CD5F;
+  background-color: #c1f0cf;
+  text-align:center;
+}
+.under-construction-review .noSelected{
+  border:1px solid #EF473A;
+  background-color:#fbd3d0;
+  text-align:center;
+}
+.under-construction-review .notSureSelected{
+    border: 1px solid #4dd2ff;
+    background-color: #ccf2ff;
+    text-align: center;
+}
+
+.under-construction-review .kids, .under-construction-review .pets, .under-construction-review .singles, .under-construction-review .elders, .under-construction-review .family{
+    width: 32px;
+    height: 48px;
+}
+
+.under-construction-review #row-title{
+  font-size:1.13em;
+  margin-left:2px;
+  color: #000;
+}
+
+.under-construction-review #rating-title{
+  margin-left:15px;
+}
+
+.under-construction-review #comments {
+  color:#000;
+}
+
+.under-construction-review #infoIcon i{
+    color: #18AFD1;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
 /*commercial reviews*/
 .commercial-review .commercial-review-content {
     background-color: #F5F7F7;
@@ -255,6 +347,11 @@
   border:1px solid #ccc;
   text-align:center;
 }
+.locality-review #infoIcon i{
+    color: #18AFD1;
+    font-size: 20px;
+    margin-left: 10px;
+}
 
 .locality-review .yesSelected{
   border:1px solid #33CD5F;
@@ -302,3 +399,20 @@
   width:50px;
 }
 
+#infoBox {
+    padding: 0px 12px;
+    border-radius: 15px;
+    background-color: #d1f2fa;
+    position: fixed;
+    width: 50%;
+    /* top: 50px; */
+    top: 10%;
+    right: 10px;
+    border: 1px solid #5ed1ed;
+}
+
+.reviewMsg {
+    color: #18AFD1;
+    margin-left: 15px;
+    margin-top: -10px;
+}
