--- a/www/templates/reviews/under-construction-review.html
+++ b/www/templates/reviews/under-construction-review.html
@@ -1,4 +1,4 @@
-<ion-view class="residential-review" cache-view="true">
+<ion-view class="under-construction-review" cache-view="true">
     <style>
     img {
         transform: translateZ(0);
@@ -7,7 +7,7 @@
     <ion-header-bar class="bar-light" align-title="center">
         <button class="icon ion-chevron-left button button-light" ng-click="goBack()"></button>
     </ion-header-bar>
-    <ion-content class="residential-review-content has-header padding has-footer">
+    <ion-content class="under-construction-review-content has-header padding has-footer">
         <div class="review-params">
             <div class="display-style row">
                 <div class="col col-20">
@@ -46,44 +46,17 @@
                 </label>
             </div>
             <div class="display-style">
-                <p id="row-title">Is the project conveniently located?</p>
-                <div class="row">
-                    <div class="col ans" ng-click="getConvenient('yes')" ng-class="review.convenientlyLocated=='yes'?'yesSelected':'notSelected'">Yes</div>
-                    <div class="col ans" ng-click="getConvenient('no')" ng-class="review.convenientlyLocated=='no'?'noSelected':'notSelected'">No</div>
-                    <div class="col ans" ng-click="getConvenient('notSure')" ng-class="review.convenientlyLocated=='notSure'?'notSureSelected':'notSelected'">Not Sure</div>
-                </div>
-            </div>
-            <div class="display-style">
-                <p id="row-title">Do you have easy access to public transport?</p>
-                <div class="row">
-                    <div class="col ans" ng-click="publicTransport('yes')" ng-class="review.easyAccessToPublicTransport=='yes'?'yesSelected':'notSelected'">Yes</div>
-                    <div class="col ans" ng-click="publicTransport('no')" ng-class="review.easyAccessToPublicTransport=='no'?'noSelected':'notSelected'">No</div>
-                    <div class="col ans" ng-click="publicTransport('notSure')" ng-class="review.easyAccessToPublicTransport=='notSure'?'notSureSelected':'notSelected'">Not Sure</div>
-                </div>
-            </div>
-            <div class="display-style">
                 <div class="row">
                     <p id="row-title">How would you rate the following?</p>
                 </div>
                 <div class="ratings">
-                    <p id="rating-title">Security</p>
+                    <p id="rating-title">Clubhouse Amenities</p>
                     <div class="row">
                         <div class="col col-75">
                             <ionic-ratings ratingsobj='ratingsObject2'></ionic-ratings>
                         </div>
                         <div class="col col-25" id="comments">
-                            {{security.comment}}
-                        </div>
-                    </div>
-                </div>
-                <div class="ratings">
-                    <p id="rating-title">Amenities</p>
-                    <div class="row">
-                        <div class="col col-75">
-                            <ionic-ratings ratingsobj='ratingsObject3'></ionic-ratings>
-                        </div>
-                        <div class="col col-25" id="comments">
-                            {{amenities.comment}}
+                            {{clubhouseAmenities.comment}}
                         </div>
                     </div>
                 </div>
@@ -91,7 +64,7 @@
                     <p id="rating-title">Open/Green Areas</p>
                     <div class="row">
                         <div class="col col-75">
-                            <ionic-ratings ratingsobj='ratingsObject4'></ionic-ratings>
+                            <ionic-ratings ratingsobj='ratingsObject3'></ionic-ratings>
                         </div>
                         <div class="col col-25" id="comments">
                             {{openGreenAreas.comment}}
@@ -99,36 +72,47 @@
                     </div>
                 </div>
                 <div class="ratings">
-                    <p id="rating-title">Electricity and Water Supply</p>
+                    <p id="rating-title">Value for Money</p>
+                    <div class="row">
+                        <div class="col col-75">
+                            <ionic-ratings ratingsobj='ratingsObject4'></ionic-ratings>
+                        </div>
+                        <div class="col col-25" id="comments">
+                            {{valueForMoney.comment}}
+                        </div>
+                    </div>
+                </div>
+                <div class="ratings">
+                    <p id="rating-title">Rent on Investment</p>
                     <div class="row">
                         <div class="col col-75">
                             <ionic-ratings ratingsobj='ratingsObject5'></ionic-ratings>
                         </div>
                         <div class="col col-25" id="comments">
-                            {{electricityAndWaterSupply.comment}}
+                            {{rentOnInvestment.comment}}
                         </div>
                     </div>
                 </div>
                 <div class="ratings">
-                    <p id="rating-title">Convenience of Housemaids</p>
+                    <p id="rating-title">Location</p>
                     <div class="row">
                         <div class="col col-75">
                             <ionic-ratings ratingsobj='ratingsObject6'></ionic-ratings>
                         </div>
                         <div class="col col-25" id="comments">
-                            {{convenienceOfHousemaids.comment}}
+                            {{location.comment}}
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="display-style">
-                <div class="row">
-                    <p id="row-title">Would you recommend this for?</p>
-                </div>
-                <div class="row" id="closeby">
-                    <div class="col" ng-click="selectRecommendedFor(item.id, $index)" ng-repeat="item in recommend">
-                        <img ng-src="{{item.imgsrc}}" class="{{item.id}} recommendations" />
-                        <p>{{item.name}}</p>
+                <div class="ratings">
+                    <p id="rating-title">Current Connectivity</p>
+                    <div class="row">
+                        <div class="col col-75">
+                            <ionic-ratings ratingsobj='ratingsObject7'></ionic-ratings>
+                        </div>
+                        <div class="col col-25" id="comments">
+                            {{currentConnectivity.comment}}
+                        </div>
                     </div>
                 </div>
             </div>
