--- a/www/css/reviews/all-reviews.css
+++ b/www/css/reviews/all-reviews.css
@@ -413,6 +413,11 @@
 
 .reviewMsg {
     color: #18AFD1;
-    margin-left: 15px;
     margin-top: -10px;
+    float: right;
+    margin-right: 20px;
+}
+
+.reviewMsg .show{
+  display:inline;
 }
